# madlib-cli

./: README.md  madlib.py  pyproject.toml  test_madlib.py
